fixed data:image line spacing issue

--- a/includes/nav.styl
+++ b/includes/nav.styl
@@ -187,7 +187,7 @@
         flex-wrap nowrap
 
 
-@media (max-width: 767px)   
+@media (max-width: 767px)
     .navbar-expand-md > .container, .navbar-expand-md > .container-fluid
         padding-right 0
         padding-left 0
@@ -331,8 +331,7 @@
         color rgba(0, 0, 0, 0.5)
         border-color rgba(0, 0, 0, 0.1)
     .navbar-toggler-icon
-        background-image url("data:image/svg+xml
-        charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http //www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0, 0, 0, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E")
+        background-image url("data:image/svg+xml charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http //www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0, 0, 0, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E")
     .navbar-text
         color rgba(0, 0, 0, 0.5)
 
@@ -360,8 +359,7 @@
         color rgba(255, 255, 255, 0.5)
         border-color rgba(255, 255, 255, 0.1)
     .navbar-toggler-icon
-        background-image url("data:image/svg+xml
-        charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http //www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E")
+        background-image url("data:image/svg+xml charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http //www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E")
     .navbar-text
         color rgba(255, 255, 255, 0.5)
 
